K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: flask-app
  labels:
    app.kubernetes.io/name: myingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /flask 
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /flask
            pathType: Prefix
            backend:
              service:
                name: library-frontend
                port:
                  number: 5000
